# CG24_submission

A-01/: .gitignore  05.cpp  Makefile  README.md
A-01/assets/: demo.mov
L-01/: README.md  denoiser.py  models.py  requirements.txt  utils.py
R-01/: .gitignore  CMakeLists.txt  README.md  main.cpp
R-01/core/: camera.hpp  color.hpp  ray.hpp  shape.hpp  utils.hpp
R-01/objects/: cylinder.hpp  sphere.hpp
